Update all dependencies, target java 14 (was 8)
- jackson update: use JavaTimeModule and LocalDate instead of Date
  everywhere

- tomcat update: get servlet-api provided by tomcat-servlet-api

- jersey/jaxb/... update: dependencies and files moved around

- aws update: can't instanciate S3Client directly